2009-03-01  Benilton Carvalho <bcarvalh@jhsph.edu> - committed version 1.0.40

* Added TODO file

* Added CHANGES file

* Reduced number of files in R/ by combining functions for a given methodology (crlmm / cnrma)

* Files with suffix XYZ-functions.R should have *functions* for methodology XYZ

* Files with suffix XYZ-methods.R should have *methods* for methodology XYZ

* Imported assayDataNew from Biobase

* Added inst/scripts to store vignettes that can't be built by BioC
due to the fact that they depend on external data not available as
BioC data packages

* Added crlmmSet class and calls/confs methods

2009-03-08 Benilton Carvalho <bcarvalh@jhsph.edu> - committed version 1.0.55

* Added biocViews

* Removed empty \details{} in cnrma.Rd